--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
 		"vite": "^6.2.5"
 	},
 	"dependencies": {
-		"@inlang/paraglide-js": "^2.0.0"
+		"@inlang/paraglide-js": "^2.0.0",
+		"@shentohendriks/svelte-smoothscroll": "^0.0.8",
+		"@types/locomotive-scroll": "^4.1.4",
+		"locomotive-scroll": "^4.1.4"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
